--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 
         <section>
             <div>
-                <h1>Katherine de mi corazón, tú eres mí razón.</h1>
+                <h1>Katherine de mi corazón, tú eres mi razón.</h1>
                 <div id="home">
                     <div>
                         <p>Hoy cumple años la niña más linda que ha existido en este universo jsjs.
-                            La persona que más admiro, que más pienso, y además, que amo ...
+                            La persona que más admiro, que más pienso, y además, que amo...
                         </p>
                         <p>
-                            FELIZ CUNPLEAÑOSSSSSSSSS MI NIÑAAAAA
+                            FELIZ CUMPLEAÑOS MI NIÑAAAAA
                         </p>
                     </div>
                     <figure>
@@ -52,7 +52,9 @@
                     <img class="slider-item" src="./assets/images/11.png"/>
     
                 </figure>
-                <p>Sonriame toda la vida por favor. Te amo Katherine.</p>
+                <p>Te deseo lo mejor hoy, mañana y siempre.
+                    Sonriame toda la vida por favor. 
+                    Te amo Katherine.</p>
             </div>
         </section>
 
